# fes-firmware

./: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/: CMakeLists.txt  command_handler.c  command_handler.h  commands.c  commands.h  config.h  data.h  data_struct.h  device_info.c  device_info.h  device_state.c  device_state.h  ethernet.c  heartbeat.c  heartbeat.h  hw_module.c  hw_module.h  main.c  pca9685.c  pca9685.h  protocol.c  protocol.h  safety.c  safety.h  stimulation.c  stimulation.h  tcp.c  tcp.h  tcp_server.c  tcp_server.h  utils.c  utils.h  wifi.c  wifi.h
firmware/hardware/: pca9685.c  pca9685.h  pulse.c  pulse.h  stimulation.c  stimulation.h
firmware/network/: protocol.c  protocol.h  tcp_server.c  tcp_server.h  wifi.c  wifi.h
firmware/transport/: commands.c  commands.h  ethernet.c  ethernet.h  heartbeat.c  heartbeat.h  protocol.c  protocol.h  tcp_server.c  tcp_server.h  utils.h  wifi.c
