idf_component_register(
    SRCS
        "main.c"
        "transport/tcp_server.c"
        "transport/protocol.c"
        "transport/wifi.c"
        "transport/ethernet.c"
        "transport/commands.c"
        "transport/heartbeat.c"
        "utils.c"
        "hardware/pca9685.c"
        "hardware/stimulation.c"
        "hardware/pulse.c"

    INCLUDE_DIRS
        "."
        "transport"
        "hardware"

    PRIV_REQUIRES
        "esp_wifi"
        "esp_eth"
        "esp_event"
        "esp_netif"
        "nvs_flash"
        "freertos"
        "lwip"
        "esp_driver_i2c"
        "esp_timer"
)
